Changed broken select() timeout based timers into setitimer() timers.

--- a/ports/unix/proj/minimal/Makefile
+++ b/ports/unix/proj/minimal/Makefile
@@ -68,7 +68,7 @@ LWIPFILESW=$(wildcard $(LWIPFILES))
 LWIPOBJS=$(notdir $(LWIPFILESW:.c=.o))
 
 # APPFILES
-APPFILES=echo.c 
+APPFILES=echo.c timer.c 
 
 LWIPLIB=liblwip4.a
 APPLIB=liblwipapps.a
