--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1733,6 +1733,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\lwippools.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\arch\perf.h"
 				>
 			</File>
