Changed pktif.c/pktdrv.c implementation to remove global variables -> more than one adapter can be used (needed to test DHCP on multiple adapters); added DHCP support; initialize loopif before ethernetif (little bit faster since netif_list starts with ethernetif)

--- a/ports/win32/msvc8/lwIP pktif.vcproj
+++ b/ports/win32/msvc8/lwIP pktif.vcproj
@@ -218,6 +218,18 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<Filter
+			Name="Header Files"
+			>
+			<File
+				RelativePath="..\pktdrv.h"
+				>
+			</File>
+			<File
+				RelativePath="..\pktif.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
